--- a/website.properties
+++ b/website.properties
@@ -1,9 +1,13 @@
 url=https://reverb.com
 name=Nicolas
 lastName=Peralta
-email=doxovil368@990ys.com
+email=dicijot496@gameqo.com
 password=Colombia2021!
+notPassword=Colombia2021
 searchItem = Fender Stratocaster
 filterPrice = Gibson Les Paul
 wrongAssert = The items do not match
+wrongLogIn = The password or email you entered is incorrect.
 highToLow = Condenser Microphones
+signUp = signup
+signIn = signin
